# coorsa_robotic_system

./: CMakeLists.txt  README.md  package.xml
action/: DetectBoxes.action  DetectPlanes.action  EvaluatePlan.action  PerformPicking.action
include/coorsa_interface/: CoorsaCoordinator.h  taskmanager.h
launch/: coordinator_coorsa.launch  static.launch
src/: coorsa_coordinator_main.cpp  coorsa_pick_action_server.cpp  coorsa_test_action_final.cpp  fake_box_detector.cpp  fake_box_planner.cpp  fake_plane_detector.cpp  task_control.cpp  task_manager_test.cpp
src/coorsa_interface/: CoorsaCoordinator.cpp  taskmanager.cpp
